k8s/overlays/aks/patches/storageclass-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: voting
spec:
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      storageClassName: managed-csi
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
