k8s/overlays/aks/patches/workload-identity-pod-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eligibility-api
  namespace: voting
spec:
  template:
    metadata:
      labels:
        azure.workload.identity/use: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-api
  namespace: voting
spec:
  template:
    metadata:
      labels:
        azure.workload.identity/use: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: voting
spec:
  template:
    metadata:
      labels:
        azure.workload.identity/use: "true"
