k8s/overlays/aks/patches/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  namespace: voting
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: azure-application-gateway
